--- a/netlify.toml
+++ b/netlify.toml
@@ -27,13 +27,14 @@
   [headers.values]
     Cache-Control = "public, immutable, max-age=31536000"
 
-# Redirecciones para manejo de rutas
+# Redirecciones para Next.js API Routes
 [[redirects]]
   from = "/api/*"
-  to = "/.netlify/functions/api/:splat"
+  to = "/.netlify/functions/:splat"
   status = 200
 
+# Fallback para SPA routing
 [[redirects]]
   from = "/*"
-  to = "/index.html"
-  status = 200 
+  to = "/404.html"
+  status = 404 
