--- a/package.json
+++ b/package.json
@@ -5,11 +5,21 @@
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
-    "build:optimized": "node scripts/build-optimization.js",
+    "build:netlify": "prisma generate && next build && next export",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "type-check": "tsc --noEmit",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "db:migrate": "prisma migrate dev",
+    "db:reset": "prisma migrate reset",
+    "cleanup": "node scripts/cleanup-images.js",
+    "optimize-images": "node scripts/optimize-images.js",
+    "health-check": "node scripts/health-check.js",
+    "postbuild": "next-sitemap",
+    "build:optimized": "node scripts/build-optimization.js",
     "build:production": "npm run lint && npm run type-check && npm run build",
     "build:analyze": "ANALYZE=true npm run build",
     "start:production": "node scripts/start-production.js",
