--- a/netlify.toml
+++ b/netlify.toml
@@ -13,7 +13,7 @@
 [build.processing]
   skip_processing = false
 
-# Headers para optimización
+# Headers para optimización y corrección de MIME types
 [[headers]]
   for = "/*"
   [headers.values]
@@ -21,11 +21,31 @@
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
 
+# Headers específicos para CSS
+[[headers]]
+  for = "/_next/static/css/*"
+  [headers.values]
+    Content-Type = "text/css"
+    Cache-Control = "public, immutable, max-age=31536000"
+
+# Headers específicos para JavaScript
+[[headers]]
+  for = "/_next/static/chunks/*"
+  [headers.values]
+    Content-Type = "application/javascript"
+    Cache-Control = "public, immutable, max-age=31536000"
+
 # Configuración de caché para assets estáticos
 [[headers]]
   for = "/_next/static/*"
   [headers.values]
     Cache-Control = "public, immutable, max-age=31536000"
+
+# Headers para imágenes optimizadas
+[[headers]]
+  for = "/_next/image*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000"
 
 # Redirecciones para Next.js API Routes
 [[redirects]]
@@ -33,8 +53,14 @@
   to = "/.netlify/functions/:splat"
   status = 200
 
+# Redirección para manejo de imágenes optimizadas
+[[redirects]]
+  from = "/_next/image*"
+  to = "/.netlify/functions/__next_image"
+  status = 200
+
 # Fallback para SPA routing
 [[redirects]]
   from = "/*"
-  to = "/404.html"
-  status = 404 
+  to = "/index.html"
+  status = 200 
