--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,9 @@
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
+[functions]
+  external_node_modules = ["@prisma/client", "prisma"]
+
 [build.environment]
   NODE_VERSION = "18"
   NPM_FLAGS = "--legacy-peer-deps"
@@ -47,19 +50,7 @@
   [headers.values]
     Cache-Control = "public, max-age=31536000"
 
-# Redirecciones para Next.js API Routes
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
-
-# Redirección para manejo de imágenes optimizadas
-[[redirects]]
-  from = "/_next/image*"
-  to = "/.netlify/functions/__next_image"
-  status = 200
-
-# Fallback para SPA routing
+# SPA fallback - debe ir al final
 [[redirects]]
   from = "/*"
   to = "/index.html"
