--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "create-admin": "npx tsx scripts/create-admin.ts",
     "performance:audit": "lighthouse http://localhost:3000 --output=json --output-path=./lighthouse-report.json",
     "bundle:analyze": "npx @next/bundle-analyzer",
-    "generate:favicons": "node scripts/generate-favicons.js",
-    "check:images": "node scripts/image-optimization-check.js"
+    "generate:favicons": "node scripts/generate-favicons.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
