--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
   command = "npm run build"
   publish = ".next"
+  base = "."
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
@@ -9,8 +10,9 @@
   external_node_modules = ["@prisma/client", "prisma"]
 
 [build.environment]
-  NODE_VERSION = "18"
+  NODE_VERSION = "20"
   NPM_FLAGS = "--legacy-peer-deps"
+  NEXT_TELEMETRY_DISABLED = "1"
 
 # Configuración para Next.js
 [build.processing]
